2008-02-08  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (pgg-display-output-buffer): Declare as function.

2008-02-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-group-startup-message): Add `find-image' call before
	image-load-path is let-bound.  Reported by Harald Hanche-Olsen
	<hanche@math.ntnu.no>.

2008-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Work for draft group.

2008-02-01  Zhang Wei  <id.brep@gmail.com>

	* rfc2047.el (rfc2047-charset-encoding-alist): Add gbk and GB18030.

	* mm-util.el (mm-mime-mule-charset-alist): Add gbk and GB18030.

2008-02-01  Miles Bader  <miles@gnu.org>

	* mml.el (mml-parse-1): Remove apparently vestigial use of
	`mm-hack-charsets'.
	* mm-bodies.el (mm-encode-body): Likewise.

2008-02-01  Kenichi Handa  <handa@m17n.org>

	* rfc2104.el (rfc2104-hexstring-to-byte-list): Renamed from
	rfc2104-hexstring-to-bitstring and changed to return a byte list.
	(rfc2104-hash): Convert the result of concat to unibyte string.

2008-02-01  Dave Love  <fx@gnu.org>

	* gnus-start.el (gnus-read-newsrc-el-file): Don't bind
	coding-system-for-read.
	(gnus-gnus-to-quick-newsrc-format): Insert coding cookie.

	* mm-util.el (mm-hack-charsets, mm-iso-8859-15-compatible)
	(mm-iso-8859-x-to-15-table, mm-iso-8859-x-to-15-region): Deleted.
	(mm-find-mime-charset-region): Remove hack-charsets stuff.

2008-01-24  Michael Sperber  <sperber@deinprogramm.de>

	* mail-source.el (mail-sources): Add `group' choice.

	* nnmail.el (nnmail-get-new-mail-1): Abstract this out to add another
	parameter `in-group' to control into which group the articles go.
	Add treatment of `group' mail-source.

2008-01-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* sieve.el (sieve-make-overlay, sieve-overlay-put, sieve-overlays-at):
	* message.el (message-beginning-of-line): Use featurep instead of bound
	tests in order to resolve conditionals at compile time.

2008-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>
